# termical_himikro_ros2

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: termical_camera.yaml  termical_camera_ffmpeg_pipe.yaml
fanet_rso2/CPGFANet/docker/jetson/: Dockerfile
fanet_rso2/CPGFANet/model/: CrissCrossAttention_dual_2_sinINF.py  FEANet.py
fanet_rso2/CPGFANet/ros2_ws/src/cpgfanet_inference/: package.xml  setup.cfg  setup.py
fanet_rso2/CPGFANet/ros2_ws/src/cpgfanet_inference/config/: offline_inference.params.yaml  topic_pipeline.params.yaml
fanet_rso2/CPGFANet/ros2_ws/src/cpgfanet_inference/cpgfanet_inference/: dataset_replay_node.py  model_runtime.py  offline_inference_node.py  topic_inference_node.py
fanet_rso2/CPGFANet/ros2_ws/src/cpgfanet_inference/launch/: offline_inference.launch.py  topic_pipeline.launch.py
fanet_rso2/CPGFANet/ros2_ws/src/cpgfanet_inference/resource/: cpgfanet_inference
fanet_rso2/CPGFANet/weights/: README.md
fanet_tensorRT_ros2/: Dockerfile  README.md  README_IMPROVEMENTS.md  README_LAUNCH.md  README_SYSTEM.md
fanet_tensorRT_ros2/configs/: fanet_trt.params.yaml
fanet_tensorRT_ros2/ros2_ws/src/cpgfanet_trt_gui/: CMakeLists.txt  package.xml
fanet_tensorRT_ros2/ros2_ws/src/cpgfanet_trt_gui/src/: rgb_person_annotator_node.cpp
fanet_tensorRT_ros2/ros2_ws/src/cpgfanet_trt_inference/: package.xml  setup.cfg  setup.py
fanet_tensorRT_ros2/ros2_ws/src/cpgfanet_trt_inference/cpgfanet_trt_inference/: topic_inference_trt_node.py  trt_runtime.py
fanet_tensorRT_ros2/scripts/: build_all_artifacts.sh  build_engine_docker.sh  build_fanet_engine.sh  build_image.sh  check_topics_trt.sh  config.sh  down_trt_stack.sh  export_fanet_onnx.py  export_onnx_docker.sh  run_trt_topic_inference_docker.sh  up_trt_stack.sh
jetson_fanet_live_stack/: .env.example  .gitignore  Dockerfile.hikmicro  GITHUB_PUSH.md  HIKMICRO_BENCH.md  MONOREPO_PLAN.md  README.md  REPO_MAP.md  docker-compose.yml  fanet_balanced.params.yaml  fanet_fast.params.yaml  fanet_live.params.yaml  fanet_tuned.params.yaml  gui_topics_publisher.py  hikmicro_ffmpeg_pipe.yaml  image_topic_viewer.py  pair_sync_bridge.py  person_overlay_viewer.py  person_position_from_depth.py  rgb_topic_adapter.py  thermal_rtsp_publisher.py  thermal_topic_viewer.py  topic_fps_probe.py
jetson_fanet_live_stack/scripts/: build_images.sh  capture_runtime_report.sh  check_topics.sh  config.sh  down.sh  echo_person_pose.sh  logs.sh  monitor_fanet.sh  open_fanet_viewers.sh  open_hikmicro_bench_docker.sh  open_person_overlay_viewer.sh  open_thermal_viewer.sh  open_tracking_views.sh  sync_hikmicro_bench_ws.sh  up.sh
launch/: termical_camera.launch.py  termical_camera_ffmpeg_pipe.launch.py
src/: termical_hikmicro.cpp  termical_hikmicro_ffmpeg_pipe.cpp
