<?xml version="1.0"?>
<package format="3">
  <name>hikmicro_thermal_camera</name>
  <version>0.1.0</version>
  <description>ROS 2 nodes to read Hikmicro thermal camera RTSP stream (OpenCV backend and ffmpeg pipe).</description>

  <maintainer email="todo@example.com">TODO</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <depend>cv_bridge</depend>
  <depend>opencv</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
