<?xml version="1.0"?>
<package format="3">
  <name>cpgfanet_trt_gui</name>
  <version>0.1.0</version>
  <description>RGB annotator node in C++ for TensorRT live tracking.</description>

  <maintainer email="isa@example.com">isa</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>