<?xml version="1.0"?>
<package format="3">
  <name>cpgfanet_trt_inference</name>
  <version>0.1.0</version>
  <description>ROS 2 Humble TensorRT topic inference node for RGB plus thermal FANet.</description>
  <maintainer email="isa@example.com">isa</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>python3-numpy</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
