<?xml version="1.0"?>
<package format="3">
  <name>cpgfanet_inference</name>
  <version>0.1.0</version>
  <description>ROS 2 Humble offline inference node for RGB plus thermal CPGFANet checkpoints.</description>
  <maintainer email="isa@example.com">isa</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-pil</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>